Making less restrictive metadata tools